Git Tests/force-app/main/default/default/objects/OrderItem/fields/CampanhaShelfLifeAux__c.field-meta.xml
<CustomField>
    <fullName>CampanhaShelfLifeAux__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É de campanha Shelf Life (Auxiliar)?</label>
    <type>Checkbox</type>
</CustomField>