Git Tests/force-app/main/default/default/objects/OrderItem/fields/CamposExtras__c.field-meta.xml
<CustomField>
    <fullName>CamposExtras__c</fullName>
    <label>Campos Extras</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>