Git Tests/force-app/main/default/default/objects/OrderItem/fields/CategoriaComercial__c.field-meta.xml
<CustomField>
    <fullName>CategoriaComercial__c</fullName>
    <formula>TEXT(Product2.CategoriaComercial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria comercial</label>
    <type>Text</type>
</CustomField>