Git Tests/force-app/main/default/default/objects/OrderItem/fields/CentroDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CentroDistribuicao__c</fullName>
    <label>Centro de distribuição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>