Git Tests/force-app/main/default/default/objects/OrderItem/fields/CodigoProduto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProduto__c</fullName>
    <formula>Product2.ExternalId__c</formula>
    <label>Código do produto</label>
    <type>Text</type>
</CustomField>