Git Tests/force-app/main/default/default/objects/OrderItem/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <label>Desconto</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>