Git Tests/force-app/main/default/default/objects/OrderItem/fields/EANProduto__c.field-meta.xml
<CustomField>
    <fullName>EANProduto__c</fullName>
    <formula>Product2.EANProduto__c</formula>
    <label>EAN do produto</label>
    <type>Text</type>
</CustomField>