Git Tests/force-app/main/default/default/objects/OrderItem/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Número do item do pedido</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>