Git Tests/force-app/main/default/default/objects/OrderItem/fields/ItemCampanha__c.field-meta.xml
<CustomField>
    <fullName>ItemCampanha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item da campanha</label>
    <referenceTo>ItemCampanha__c</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>ProdutosPedido</relationshipName>
    <type>Lookup</type>
</CustomField>