Git Tests/force-app/main/default/default/objects/OrderItem/fields/ItemContrato__c.field-meta.xml
<CustomField>
    <fullName>ItemContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item de contrato</label>
    <referenceTo>ItemContrato__c</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>ProdutosPedido</relationshipName>
    <type>Lookup</type>
</CustomField>