Git Tests/force-app/main/default/default/objects/OrderItem/fields/ItemPendente__c.field-meta.xml
<CustomField>
    <fullName>ItemPendente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item pendente</label>
    <type>Checkbox</type>
</CustomField>