Git Tests/force-app/main/default/default/objects/OrderItem/fields/Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Laboratorio__c</fullName>
    <label>Laboratório</label>
    <length>255</length>
    <type>Text</type>
</CustomField>