Git Tests/force-app/main/default/default/objects/OrderItem/fields/LastNotification__c.field-meta.xml
<CustomField>
    <fullName>LastNotification__c</fullName>
    <description>Última notificação recebida do controle de estoque.</description>
    <inlineHelpText>Última notificação recebida do controle de estoque.</inlineHelpText>
    <label>Última notificação</label>
    <type>DateTime</type>
</CustomField>