Git Tests/force-app/main/default/default/objects/OrderItem/fields/Margem__c.field-meta.xml
<CustomField>
    <fullName>Margem__c</fullName>
    <label>Margem Atual</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>