Git Tests/force-app/main/default/default/objects/OrderItem/fields/MargemAlvo__c.field-meta.xml
<CustomField>
    <fullName>MargemAlvo__c</fullName>
    <label>Margem Alvo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>