Git Tests/force-app/main/default/default/objects/OrderItem/fields/MargemBU__c.field-meta.xml
<CustomField>
    <fullName>MargemBU__c</fullName>
    <label>Margem da BU</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>