Git Tests/force-app/main/default/default/objects/OrderItem/fields/NumeroAnvisa__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisa__c</fullName>
    <formula>Product2.NumeroAnvisa__c</formula>
    <label>Número da Anvisa</label>
    <type>Text</type>
</CustomField>