Git Tests/force-app/main/default/default/objects/OrderItem/fields/PosicaoInsercao__c.field-meta.xml
<CustomField>
    <fullName>PosicaoInsercao__c</fullName>
    <label>Posição do item inserido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>