Git Tests/force-app/main/default/default/objects/OrderItem/fields/PrecoTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecoTotal__c</fullName>
    <label>Preço total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>