Git Tests/force-app/main/default/default/objects/OrderItem/fields/PrincipioAtivoProduto__c.field-meta.xml
<CustomField>
    <fullName>PrincipioAtivoProduto__c</fullName>
    <formula>Product2.Description</formula>
    <label>Princípio ativo do produto</label>
    <type>Text</type>
</CustomField>