Git Tests/force-app/main/default/default/objects/OrderItem/fields/ProdutoCampanha__c.field-meta.xml
<CustomField>
    <fullName>ProdutoCampanha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produto está em campanha?</label>
    <type>Checkbox</type>
</CustomField>