Git Tests/force-app/main/default/default/objects/OrderItem/fields/ProdutoCampanhaDesc__c.field-meta.xml
<CustomField>
    <fullName>ProdutoCampanhaDesc__c</fullName>
    <label>Descrição do produto de campanha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>