Git Tests/force-app/main/default/default/objects/OrderItem/fields/QuantidadePDF__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePDF__c</fullName>
    <label>Quantidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>