Git Tests/force-app/main/default/default/objects/OrderItem/fields/QuantidadePendenteOriginal__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePendenteOriginal__c</fullName>
    <label>Quantidade pendente original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>