Git Tests/force-app/main/default/default/objects/OrderItem/fields/QuantidadeTroca__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeTroca__c</fullName>
    <label>Quantidade de troca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>