Git Tests/force-app/main/default/default/objects/OrderItem/fields/QuantidadeUn__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeUn__c</fullName>
    <inlineHelpText>Secundário: Segunda unidade de medida do produto</inlineHelpText>
    <label>Quantidade (Secundário)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>