Git Tests/force-app/main/default/default/objects/OrderItem/fields/QuantityChanged__c.field-meta.xml
<CustomField>
    <fullName>QuantityChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso o item tenha sua quantidade diferente do item de cotação correspondente este campo estará checado.</description>
    <label>Quantidade mudada pelo cliente</label>
    <type>Checkbox</type>
</CustomField>