Git Tests/force-app/main/default/default/objects/OrderItem/fields/QuantityIMG__c.field-meta.xml
<CustomField>
    <fullName>QuantityIMG__c</fullName>
    <formula>TEXT(Quantity)+IF(QuantityChanged__c, &apos; &apos;+IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos; [!]&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantidade do pedido, caso haja alteração pelo cliente será marcada com um sinal de alerta.</inlineHelpText>
    <label>Quantidade</label>
    <type>Text</type>
</CustomField>