Git Tests/force-app/main/default/default/objects/OrderItem/fields/QuoteItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resposta do Orçamento</label>
    <referenceTo>QuoteItem__c</referenceTo>
    <relationshipLabel>Items Pedidos</relationshipLabel>
    <relationshipName>ProdutoPedidoGerado</relationshipName>
    <type>Lookup</type>
</CustomField>