Git Tests/force-app/main/default/default/objects/OrderItem/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Range de preços</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>