Git Tests/force-app/main/default/default/objects/OrderItem/fields/ScoreAlvo__c.field-meta.xml
<CustomField>
    <fullName>ScoreAlvo__c</fullName>
    <label>Score Alvo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>