Git Tests/force-app/main/default/default/objects/OrderItem/fields/ScoreBU__c.field-meta.xml
<CustomField>
    <fullName>ScoreBU__c</fullName>
    <label>Score BU</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>