Git Tests/force-app/main/default/default/objects/OrderItem/fields/ScoreMix__c.field-meta.xml
<CustomField>
    <fullName>ScoreMix__c</fullName>
    <label>Score Mix</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>