Git Tests/force-app/main/default/default/objects/OrderItem/fields/SequenciaOC__c.field-meta.xml
<CustomField>
    <fullName>SequenciaOC__c</fullName>
    <externalId>true</externalId>
    <label>Sequência de O/C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>