Git Tests/force-app/main/default/default/objects/OrderItem/fields/SolicitacaoCompras__c.field-meta.xml
<CustomField>
    <fullName>SolicitacaoCompras__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitação de compras</label>
    <referenceTo>SolicitacaoCompras__c</referenceTo>
    <relationshipLabel>Itens de solicitação de compras</relationshipLabel>
    <relationshipName>Itens_de_pedido</relationshipName>
    <type>Lookup</type>
</CustomField>