Git Tests/force-app/main/default/default/objects/OrderItem/fields/TipoOperacao__c.field-meta.xml
<CustomField>
    <fullName>TipoOperacao__c</fullName>
    <label>Tipo da operação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>