Git Tests/force-app/main/default/default/objects/OrderItem/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <formula>Product2.UnidadeMedida__c</formula>
    <label>Unidade de medida</label>
    <type>Text</type>
</CustomField>