Git Tests/force-app/main/default/default/objects/OrderItem/fields/ValorCx__c.field-meta.xml
<CustomField>
    <fullName>ValorCx__c</fullName>
    <inlineHelpText>Principal: Unidade de medida principal do produto</inlineHelpText>
    <label>Valor (Principal)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>