Git Tests/force-app/main/default/default/objects/OrderItem/fields/ValorMalha__c.field-meta.xml
<CustomField>
    <fullName>ValorMalha__c</fullName>
    <label>Valor da malha</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>