Git Tests/force-app/main/default/default/objects/OrderItem/fields/ValorSugerido__c.field-meta.xml
<CustomField>
    <fullName>ValorSugerido__c</fullName>
    <label>Preço sugerido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>