Git Tests/force-app/main/default/default/objects/OrderItem/validationRules/ItemPedido_BloquearEdicaoCampos.validationRule-meta.xml
<ValidationRule>
    <fullName>ItemPedido_BloquearEdicaoCampos</fullName>
    <active>true</active>
    <description>Regra de validação para impedir a edição dos campos &quot;Quantidade&quot; e &quot;Preço unitário&quot; do item do pedido.</description>
    <errorConditionFormula>AND(
$Profile.Name != &apos;Administrador do sistema&apos;,
Order.RecordType.DeveloperName = &apos;PedidoHistorico&apos;,
OR(
    ISCHANGED( Quantity ),
    ISCHANGED( UnitPrice )
)
)</errorConditionFormula>
    <errorMessage>Os campos &quot;Quantidade&quot; e &quot;Preço unitário&quot; não podem ser editados.</errorMessage>
</ValidationRule>